airflow/logs/dag_id=Gold_training_Pipeline/run_id=manual__2024-10-03T105343.516078+0000/task_id=preprocess_the_extracted_data/attempt=4.log
[2024-10-03T10:54:13.225+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: Gold_training_Pipeline.preprocess_the_extracted_data manual__2024-10-03T10:53:43.516078+00:00 [queued]>
[2024-10-03T10:54:13.232+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: Gold_training_Pipeline.preprocess_the_extracted_data manual__2024-10-03T10:53:43.516078+00:00 [queued]>
[2024-10-03T10:54:13.232+0000] {taskinstance.py:2193} INFO - Starting attempt 4 of 4
[2024-10-03T10:54:13.244+0000] {taskinstance.py:2217} INFO - Executing <Task(PythonOperator): preprocess_the_extracted_data> on 2024-10-03 10:53:43.516078+00:00
[2024-10-03T10:54:13.249+0000] {standard_task_runner.py:60} INFO - Started process 422 to run task
[2024-10-03T10:54:13.251+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'Gold_training_Pipeline', 'preprocess_the_extracted_data', 'manual__2024-10-03T10:53:43.516078+00:00', '--job-id', '212', '--raw', '--subdir', 'DAGS_FOLDER/gold_training_pipeline.py', '--cfg-path', '/tmp/tmplyxkmp_e']
[2024-10-03T10:54:13.252+0000] {standard_task_runner.py:88} INFO - Job 212: Subtask preprocess_the_extracted_data
[2024-10-03T10:54:13.368+0000] {task_command.py:423} INFO - Running <TaskInstance: Gold_training_Pipeline.preprocess_the_extracted_data manual__2024-10-03T10:53:43.516078+00:00 [running]> on host 5466e3b84b5d
[2024-10-03T10:54:13.424+0000] {taskinstance.py:2513} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='sdeshan' AIRFLOW_CTX_DAG_ID='Gold_training_Pipeline' AIRFLOW_CTX_TASK_ID='preprocess_the_extracted_data' AIRFLOW_CTX_EXECUTION_DATE='2024-10-03T10:53:43.516078+00:00' AIRFLOW_CTX_TRY_NUMBER='4' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-10-03T10:53:43.516078+00:00'
[2024-10-03T10:54:13.459+0000] {taskinstance.py:2731} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 444, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 414, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 200, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 217, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/components/gold/model_training/data_preprocessing.py", line 18, in preprocess_data
    create_table(data_table,
  File "/opt/airflow/dags/components/utils/database_table_creation.py", line 20, in create_table
    cur.execute(f"""
psycopg2.errors.SyntaxError: syntax error at or near "&"
LINE 3: ...price_usd VARCHAR(255),silver_price VARCHAR(255),s&p_500_ind...
                                                             ^

[2024-10-03T10:54:13.484+0000] {taskinstance.py:1149} INFO - Marking task as FAILED. dag_id=Gold_training_Pipeline, task_id=preprocess_the_extracted_data, execution_date=20241003T105343, start_date=20241003T105413, end_date=20241003T105413
[2024-10-03T10:54:13.488+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.8/site-packages/***/utils/context.py:207 AirflowContextDeprecationWarning: Accessing 'execution_date' from the template is deprecated and will be removed in a future version. Please use 'data_interval_start' or 'logical_date' instead.
[2024-10-03T10:54:13.497+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.8/site-packages/***/utils/email.py:154 RemovedInAirflow3Warning: Fetching SMTP credentials from configuration variables will be deprecated in a future release. Please set credentials using a connection instead.
[2024-10-03T10:54:13.498+0000] {email.py:270} INFO - Email alerting: attempt 1
[2024-10-03T10:54:18.727+0000] {email.py:270} INFO - Email alerting: attempt 2
[2024-10-03T10:54:21.489+0000] {email.py:281} INFO - Sent an alert email to ['deshanariyarathna@gmail.com']
[2024-10-03T10:54:23.490+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 212 for task preprocess_the_extracted_data (syntax error at or near "&"
LINE 3: ...price_usd VARCHAR(255),silver_price VARCHAR(255),s&p_500_ind...
                                                             ^
; 422)
[2024-10-03T10:54:23.502+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-10-03T10:54:23.516+0000] {taskinstance.py:3312} INFO - 0 downstream tasks scheduled from follow-on schedule check
